kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: Cheese-Rat-Cheese
  labels:
    app: Cheese-Rat-Cheese
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: Cheese-Rat-Cheese
